chore: commit pending changes after remote setup

--- a/index.html
+++ b/index.html
@@ -3,21 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechStore - Eletrônicos Premium</title>
+    <title>e-comercer</title>
     <meta name="description" content="Loja virtual de eletrônicos com os melhores produtos tech" />
-    <meta name="author" content="TechStore" />
+    <meta name="author" content="e-comercer" />
+    <!-- Security: Development-friendly CSP to protect against XSS while allowing HMR -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: blob:; font-src 'self' https://fonts.gstatic.com data:; connect-src 'self' ws:; object-src 'none'; base-uri 'self'; frame-ancestors 'none'; form-action 'self'">
+    <!-- Security: Control referrer leakage -->
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="f0d5e683-99ff-476e-b9e4-3fdc00b1cae7" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="e-cormecer" />
+    <meta property="og:description" content="Loja virtual de eletrônicos com os melhores produtos tech" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta property="og:image" content="/logo.svg" />
+    <meta name="twitter:image" content="/logo.svg" />
   </head>
 
   <body>
